# saltokvp

./: CMakeLists.txt  CMakePresets.json  README.md
docs/: Doxyfile.in
include/kvp_app/: kvp_app.h
include/kvp_client/: kvp_client.h
include/kvp_server/: kvp_server.h
include/kvp_store/: kvp_store.h
include/salto_ipc/: salto_ipc.h  salto_ipc_client.h  salto_ipc_server.h
lib/: CMakeLists.txt
lib/boost/: CMakeLists.txt
lib/json/: CMakeLists.txt
lib/kvp_app/: CMakeLists.txt  kvp_app.cpp
lib/kvp_store/: CMakeLists.txt  kvp_store.cpp
lib/salto_ipc/: CMakeLists.txt  salto_ipc.cpp
scripts/: build_and_run_kvp_client.sh  build_and_run_kvp_server.sh  build_and_run_tests.sh  generate_doc.sh  watch_kvp_storage.sh
src/: CMakeLists.txt
src/kvp_client/: kvp_client.cpp  main.cpp
src/kvp_server/: kvp_server.cpp  main.cpp
test/: CMakeLists.txt
test/lib/: CMakeLists.txt
test/lib/kvp_store/: gtest_kvp_store.cpp
test/lib/salto_ipc/: gtest_salto_ipc.cpp
test/src/: CMakeLists.txt
test/src/kvp_client/: gtest_kvp_client.cpp
test/src/kvp_server/: gtest_kvp_server.cpp
