include(${PROJECT_SOURCE_DIR}/cmake.macros)
subdirlist(children_dirs ${CMAKE_CURRENT_SOURCE_DIR})

foreach(child ${children_dirs})
  get_filename_component(module ${child} NAME)
  file(GLOB source_files_exec_${module} "${CMAKE_CURRENT_SOURCE_DIR}/${module}/*.cpp")
  if(NOT "${source_files_exec_${module}}" STREQUAL "")
    
    include_directories(${PROJECT_SOURCE_DIR}/include)
    include_directories(${PROJECT_BINARY_DIR}/include)

    add_executable(${module}_exec ${source_files_exec_${module}})
    if (CMAKE_SYSTEM_NAME MATCHES "Darwin" )
      target_link_libraries(${module}_exec pthread lib_kvp_store lib_salto_ipc lib_kvp_app)
    else()
      target_link_libraries(${module}_exec pthread lib_kvp_store lib_salto_ipc lib_kvp_app rt)
    endif()
    add_dependencies(${module}_exec json boost)
  else()
    message("No source files have been discovered for ${module} module")
  endif()
endforeach()
